# wesubtitle

./: .flake8  README.md  requirements.txt  setup.cfg  setup.py
wesubtitle/: main.py
