[metadata]
name = wesubtitle
version = attr: wesubtitle.__version__
license = Apache Software License
description = Get Subtitles by OCR from Video
long_description = file: README.md
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
